--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,3 @@
 body {
-    background-color: #d2ecf9;
-}
-
-h1 {
-    color: #1891ac;
-}
-
-h2 {
-    color: #1891ac;
-}
-
-h3 {
-    color: #1891ac;
-}
-
-hr {
-    background-color: transparent;
-    border-style: none;
-    border-top-style: dotted;
-    border-color: #1891ac;
-    border-width: 5px;
-    width: 10%;
-}
-
-li:hover{
-    font-weight: bold;
+    background-color: blue;
 }
