--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+
 body {
-    background-color: blue;
+    margin: 0;
 }
+
+div {
+    background-color: aquamarine;
+}
+
+h1 {
+    margin: 0;
+}
+
