--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 
 body {
     margin: 0;
+    text-align: center;
 }
 
 h1 {
@@ -9,6 +10,8 @@ h1 {
 
 .top-container {
     background-color: rgb(144, 175, 216);
+    position: relative;
+    padding-top: 100px;
 }
 
 .middle-container {
@@ -21,5 +24,18 @@ h1 {
     background-color: blue;
     width: 200px;
     height: 200px;
+}
+
+.top-cloud {
+    position: absolute;
+    right: 300px;
+    top: 50px;
+
+}
+
+.bottom-cloud {
+    position: absolute;
+    left: 300px;
+    bottom: 300px;
 }
 
