--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,16 @@
 body {
     margin: 0;
     text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 {
     margin-top: 0;
+    font-family: 'Open Sans', sans-serif;
+}
+
+h3 {
+    font-family: 'Recursive', sans-serif;
 }
 
 .top-container {
