--- a/css/styles.css
+++ b/css/styles.css
@@ -2,17 +2,18 @@
 body {
     margin: 0;
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 h1 {
     margin-top: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-h3 {
-    font-family: 'Recursive', sans-serif;
+h2 {
+    font-family: 'Roboto', sans-serif;
 }
+
 
 .top-container {
     background-color: rgb(144, 175, 216);
@@ -20,17 +21,6 @@ h3 {
     padding-top: 100px;
 }
 
-.middle-container {
-    background-color: red;
-    width: 200px;
-    height: 200px;
-}
-
-.bottom-container {
-    background-color: blue;
-    width: 200px;
-    height: 200px;
-}
 
 .top-cloud {
     position: absolute;
@@ -45,3 +35,6 @@ h3 {
     bottom: 300px;
 }
 
+.mountain {
+    vertical-align: bottom;
+}
