--- a/css/styles.css
+++ b/css/styles.css
@@ -2,20 +2,12 @@
 body {
     margin: 0;
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
-}
-
-h1 {
-    margin-top: 0;
     font-family: 'Roboto', sans-serif;
+    padding-bottom: 40px;
 }
 
 h2 {
-    font-family: 'Roboto', sans-serif;
-}
-
-h3{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 p {
