--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,9 @@ body {
     font-family: 'Roboto', sans-serif;
     padding-bottom: 40px;
     overflow: auto;
+    background-size:     cover;                 
+    background-repeat:   no-repeat;
+    background-position: center center;
 }
 
 h2 {
