--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ p {
     padding-right: 20px;
 }
 
+.mountain {
+    margin: auto;
+}
+
 .first-break {
     margin-top: 0;
 }
@@ -22,7 +26,6 @@ p {
     background-color: rgb(144, 175, 216);
     position: relative;
     padding-top: 100px;
-    margin: auto;
 }
 
 .keyboard {
