--- a/css/styles.css
+++ b/css/styles.css
@@ -26,19 +26,19 @@ p {
 }
 
 .keyboard {
-    height: 200px;
-    width: 200px;
+    display: inline-block;
+    width: 100px;
 }
 
 .linkedin {
     height: 50px;
     width: 50px;
+    margin: auto auto 2rem auto;
 }
 .top-cloud {
     position: absolute;
     right: 300px;
     top: 50px;
-
 }
 
 .bottom-cloud {
@@ -49,5 +49,4 @@ p {
 
 .mountain {
     vertical-align: bottom;
-    margin: auto;
 }
